fixed bird overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -1117,7 +1117,7 @@ section.policy h3 {
         padding-bottom: 0 !important;
     }
     .section-img {
-        margin: 25px auto -65px;
+        margin: 25px auto -40px;
     }
     .section-img img {
         width: 200px;
